# dl-rs

./: Cargo.toml
src/: downloader.rs  main.rs
src/downloader/: http.rs  safebooru.rs
