[package]
name = "dl-rs"
version = "1.0.0"
authors = ["Jai L."]
edition = "2018"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tui = "0.12.0"
scraper = "0.12.0"
termion = "1.5.6"
futures = "0.3"
reqwest = { version = "0.11", features = ["stream", "json"] }
url = "2.2.2"
lazy_static = "1.4.0"